--- a/apps/lcd_test/CMakeLists.txt
+++ b/apps/lcd_test/CMakeLists.txt
@@ -2,12 +2,11 @@ add_executable(lcd_test
 	main.c
 )
 
-pico_generate_pio_header(lcd_test ${CMAKE_CURRENT_LIST_DIR}/st7789_lcd.pio)
-
 target_link_libraries(lcd_test PRIVATE
 	pico_stdlib
 	hardware_pio
 	hardware_interp
+	picosystem_display
 	picosystem_buttons
 	# REQUIRED! Virtual BOOTSEL switch when ABXY are all pressed:
 	picosystem_bootbutton
