Very basic video output, seems to run BIOS ok but gets bad ROM data.

--- a/apps/picosystem_gambatte/CMakeLists.txt
+++ b/apps/picosystem_gambatte/CMakeLists.txt
@@ -12,6 +12,7 @@ target_link_libraries(picosystem_gambatte
 	pico_stdlib
 	libgambatte
 	picosystem_buttons
+	picosystem_display
 	picosystem_bootbutton
 )
 
